added urls, views and templates for projects

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8">
     <title>
         {% block site_title %}Future Green{% endblock site_title %}
-        {% block section_title %}{% endblock site_title %}
-        {% block page_title %}{% endblock site_title %}
+        {% block section_title %}{% endblock section_title %}
+        {% block page_title %}{% endblock page_title %}
     </title>
     {% block metadata %}
     <meta name="description" content="">
