--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -1,1 +1,1 @@
-{% block page_title %}: {{ project.name }}{% endblock site_title %}
+{% block page_title %}: {{ project.name }}{% endblock page_title %}
