--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -51,11 +51,11 @@
         </header>
         {% endblock header %}
 
-        {% block main %}
-        <div id="main" role="main">
 
+        <div id="main" role="main">
+        {% block main %}{% endblock main %}
         </div>
-        {% endblock main %}
+
 
         {% block footer %}
         <footer>
