--- a/futuregreen/templates/portfolio/portfolio_base.html
+++ b/futuregreen/templates/portfolio/portfolio_base.html
@@ -1,2 +1,2 @@
 {% extends "base.html" %}
-{% block section_title %}: Portfolio{% endblock site_title %}
+{% block section_title %}: Portfolio{% endblock section_title %}
