--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -1,5 +1,56 @@
 {% extends "portfolio/portfolio_base.html" %}
 {% block page_title %}: {{ project.name }}{% endblock page_title %}
 {% block main %}
-    <h1>{{ project.name }}
+    <h1>{{ project.name }}</h1>
+    <p>{{ project.short_description }}</p>
+    <p>{{ project.description_html|safe }}</p>
+    {% if date_start %}<p>{{ project.date_start }}</p>{% endif %}
+    {% if date_end %}<p>{{ project.date_end }}</p>{% endif %}
+    {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
+    <p>{{ project.status }}</p>
+    <p>{{ project.featured }}</p>
+    <p>{{ project.slug }}</p>
+    <p>{{ project.size }} {{ project.unit }} </p>
+
+    {% if project.tags.all %}
+    <ul>
+        {% for tag in project.tags.all %}
+        <li> {{ tag.name }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if project.categories.all %}
+    <ul>
+        {% for category in project.categories.all %}
+        <li> {{ category.name }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if project.clients.all %}
+    <ul>
+        {% for client in project.clients.all %}
+        <li> {{ client.name }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if project.collaborators.all %}
+    <ul>
+        {% for collaborator in project.collaborators.all %}
+        <li> {{ collaborator.name }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if project.designers.all %}
+    <ul>
+        {% for designer in project.designers.all %}
+        <li> {{ designer.name }} </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    
 {% endblock main %}
