--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -47,7 +47,14 @@
     <div id="page">
         {% block header %}
         <header>
-            
+            <h1>Future Green Studio</h1>
+            <nav>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Studio</li>
+                    <li>Blog</li>
+                </ul>
+            </nav>
         </header>
         {% endblock header %}
 
