--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -2,6 +2,7 @@
 
 {% block main %}
 <section class="project-list">
+<header><h1>All Projects</h1></header>
 {% for project in project_list %}
      <article class="project">
         <header><h1>{{ project.name }}</h1></header>
