--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -32,6 +32,7 @@
             {% endif %}
         </section>
         {% endif %}
+        <p><a href="{{ project.get_absolute_url }}">View project</a> </p>
     </article>
 {% endfor %}
 </section>
