--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/portfolio_base.html" %}
+{% extends "projects/projects_base.html" %}
 {% block page_title %}: {{ project.name }}{% endblock page_title %}
 {% block main %}
     <article class="project">
