--- a/futuregreen/templates/projects/project_list.html
+++ b/futuregreen/templates/projects/project_list.html
@@ -1,4 +1,4 @@
-{% extends "portfolio/portfolio_base.html" %}
+{% extends "projects/projects_base.html" %}
 
 {% block main %}
 <section class="project-list">
