work in progress

--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -3,6 +3,14 @@
 {% block main %}
     <article class="project">
         <header><h1>{{ project.name }}</h1></header>
+        <section class="slideshow">
+            {% for image in project.projectimages.all %}
+                <article class="images">
+                    <img src="image.url" height="image.height" width="image.width" alt="{{ image.caption }}"/>
+                    <p>{{ image.name }}: {{ image.caption }}</p>
+                </article>
+            {% endfor %}
+        </section>
         <section class="description">
             <p>{{ project.short_description }}</p>
             <p>{{ project.description_html|safe }}</p>
