--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -7,7 +7,7 @@
         <section class="slideshow">
             {% for image in project.projectimage_set.all %}
                 <article class="images">
-                    <img src="{{ image.url }}" height="image.height" width="image.width" alt="{{ image.caption }}"/>
+                    <img src="{{ image.url }}" height="{{ image.height }}" width="{{ image.width }}" alt="{{ image.caption }}"/>
                     <p>{{ image.name }}: {{ image.caption }}</p>
                 </article>
             {% endfor %}
