work in progress

--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -7,7 +7,10 @@
         <section class="slideshow">
             {% for image in project.projectimage_set.all %}
                 <article class="images">
-                    <img src="{{ image.url }}" height="{{ image.height }}" width="{{ image.width }}" alt="{{ image.caption }}"/>
+                    <img src="{{ image.admin_thumbnail.url }}"
+                         height="{{ image.admin_thumbnail.height }}"
+                         width="{{ image.admin_thumbnail.width }}"
+                         alt="{{ image.caption }}"/>
                     <p>{{ image.name }}: {{ image.caption }}</p>
                 </article>
             {% endfor %}
