--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -28,7 +28,7 @@
 
         <section class="address">
             {% load easy_maps_tags %}
-            {% easy_map project.address %}
+            {% easy_map project.address 300 400 %}
         </section>
     
          {% if project.tags.all or project.categories.all %}
