--- a/futuregreen/templates/projects/project_detail.html
+++ b/futuregreen/templates/projects/project_detail.html
@@ -22,8 +22,7 @@
             {% if date_start %}<p>{{ project.date_start }}</p>{% endif %}
             {% if date_end %}<p>{{ project.date_end }}</p>{% endif %}
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
-            <p>{{ project.area }} {{ project.get_unit_display }} </p>
-            <p>{{ project.square_feet }} square feet </p>
+            <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
         </section>
 
         <section class="address">
