--- a/futuregreen/templates/projects/project_list.html
+++ b/futuregreen/templates/projects/project_list.html
@@ -23,7 +23,7 @@
             {% if date_start %}<p>{{ project.date_start }}</p>{% endif %}
             {% if date_end %}<p>{{ project.date_end }}</p>{% endif %}
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
-            <p>{{ project.size }} {{ project.get_unit_display }} </p>
+            <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
         </section>
 
          {% if project.tags.all or project.categories.all %}
