--- a/futuregreen/templates/projects/project_list.html
+++ b/futuregreen/templates/projects/project_list.html
@@ -20,8 +20,8 @@
         </section>
         <section class="description">
             <p>{{ project.short_description }}</p>
-            {% if date_start %}<p>{{ project.date_start }}</p>{% endif %}
-            {% if date_end %}<p>{{ project.date_end }}</p>{% endif %}
+            {% if project.date_start %}<p>{{ project.date_start }}</p>{% endif %}
+            {% if project.date_end %}<p>{{ project.date_end }}</p>{% endif %}
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
             <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
         </section>
