--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -26,7 +26,7 @@
     {% endblock favicons %}
 
     {% block css %}
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
     <!-- Uncomment if you are specifically targeting less enabled mobile browsers
     <link rel="stylesheet" media="handheld" href="css/handheld.css">  -->
     {% endblock css %}
