--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block main %}
     {% load generic_flatblocks %}
-    {% gblock "firm_profile" for "content.ContentBlock" using "content/block.html" %}
+    {% gblock "firm_profile" for "content.ContentBlock" %}
 {% endblock main %}
