--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -66,7 +66,8 @@
 
         {% block footer %}
         <footer>
-
+            <p>&copy; {{ now }} Future Green Studio</p>
+            <p>92 3rd Street Brooklyn, NY | 718-855-8995 | info@futuregreenstudio.com</p>
         </footer>
         {% endblock footer %}
     </div>
