added live filter to portfolio template tag

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,10 +2,14 @@
 {% load generic_flatblocks %}
 {% load portfolio_tags %}
 {% block main %}
+    <article id="profile" class="text featured">
     {% gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
     <p><a href="#">Read More</a></p>
+    </article>
     {% get_featured_projects %}
     {% for project in featured_project_list %}
+        <article class="project featured">
         {{ project.name }}
+        </article>
     {% endfor %}
 {% endblock main %}
