--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -11,7 +11,7 @@
         <article class="project featured">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
-                    <img src="image.projectlist.url" />
+                    <img src="{{ image.projectlist.url }}" />
                 {% endif %}
             {%  endfor %}
         {{ project.name }}
