--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -47,7 +47,7 @@
     <div id="page">
         {% block header %}
         <header>
-            <h1><a href="{% url home %}""Future Green Studio</h1>
+            <h1><a href="{% url home %}""Future Green Studio</a></h1>
             <nav>
                 <ul>
                     <li>Portfolio</li>
