--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -1,6 +1,6 @@
 {% extends "portfolio/portfolio_base.html" %}
 
-{% block main %}
+{% block content %}
 <section class="project-list">
 <header><h1>All Projects</h1></header>
 {% for project in project_list %}
@@ -49,4 +49,4 @@
 {% endfor %}
 </section>
 
-{% endblock main %}
+{% endblock content %}
