--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,7 @@
 
 
         <div id="main" role="main">
-        {% block main %}{% endblock main %}
+        {% block content %}{% endblock content %}
         </div>
 
 
