added new views and urls for landscape type and project type

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,9 @@
 
 
         <div id="main" role="main">
-        {% block content %}{% endblock content %}
+        {% block content %}
+            {% block page_header %}{% endblock page_header %}
+        {% endblock content %}
         </div>
 
 
