--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <section class="project-list">
-<header><h1>All Projects</h1></header>
+{% block page_header %}
+<header><h1>{% block page_title %}All Projects{% endblock page_title %}</h1></header>
+{% endblock page_header %}
 {% for project in project_list %}
      <article class="project">
         <header><h1>{{ project.name }}</h1></header>
