--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -2,9 +2,13 @@
 
 {% block content %}
 <section class="project-list">
-{% block page_header %}
-<header><h1>{% block page_title %}All Projects{% endblock page_title %}</h1></header>
-{% endblock page_header %}
+{% block content_header %}
+<header>
+    <h1>
+        {% block content_title %}All Projects{% endblock content_title %}
+    </h1>
+</header>
+{% endblock content_header %}
 {% for project in project_list %}
      <article class="project">
         <header><h1>{{ project.name }}</h1></header>
