added new views and urls for landscape type and project type

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -61,7 +61,7 @@
 
         <div id="main" role="main">
         {% block content %}
-            {% block page_header %}{% endblock page_header %}
+            {% block content_header %}{% endblock content_header %}
         {% endblock content %}
         </div>
 
