--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -4,9 +4,9 @@
 <section class="project-list">
 {% block content_header %}
 <header>
-    <h1>
-        {% block content_title %}All Projects{% endblock content_title %}
-    </h1>
+    {% block content_title %}
+        <h1>All Projects</h1>
+    {% endblock content_title %}
 </header>
 {% endblock content_header %}
 {% for project in project_list %}
