--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -1,11 +1,16 @@
-{% extends 'portfolio/project_list.html' %}
-{% block content_header %}
+{% extends 'portfolio/portfolio_base.html' %}
+{% block content %}
+    {% block content_header %}
     <header>
     {% load category_tags %}
         <p>{% breadcrumbs category ">" %}</p>
         {% block content_title %}
-            <h1>{{ category }}</h1>
+            <h1>{{ category }} Projects</h1>
         {% endblock content_title %}
    </header>
-{% endblock content_header %}
+    {% endblock content_header %}
+    {% for project in category.categoryitems.all %}
+        {{ project }}
+    {% endfor %}
+{% endblock content %}
 
