--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -9,7 +9,7 @@
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
-    {% for project in category %}
+    {% for project in projecttype.project_set.all %}
         {{ project }}
     {% endfor %}
 {% endblock content %}
