added new views and urls for landscape type and project type

--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -6,7 +6,7 @@
         <p>{% breadcrumbs category ">" %}</p>
         {% block content_title %}
             <h1>{{ category }} Projects</h1>
-            <p>Projecttype = {{ category.projectype }}</p>
+            <p>Projecttype = {{ category.projecttype }}</p>
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
