--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -5,12 +5,13 @@
     {% load category_tags %}
         <p>{% breadcrumbs category ">" %}</p>
         {% block content_title %}
-            <h1>{{ category }} Projects</h1>
+            <h1>{{ category }} Projects {{ category.slug }}</h1>
+            <p>Projecttype = {{ category.projecttype.name }}</p>
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
     {% for project in category.projecttype.project_set.all %}
-        {% include 'portfolio/project_include.html' %}
+        {{ project }}
     {% endfor %}
 {% endblock content %}
 
