added new views and urls for landscape type and project type

--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -11,7 +11,7 @@
    </header>
     {% endblock content_header %}
     {% for project in category.projecttype.project_set.all %}
-        {{ project }}
+        {% include "portfolio/project_snippet.html" %}
     {% endfor %}
 {% endblock content %}
 
