--- a/futuregreen/templates/portfolio/projects_by_type.html
+++ b/futuregreen/templates/portfolio/projects_by_type.html
@@ -5,8 +5,7 @@
     {% load category_tags %}
         <p>{% breadcrumbs category ">" %}</p>
         {% block content_title %}
-            <h1>{{ category }} Projects {{ category.slug }}</h1>
-            <p>Projecttype = {{ category.projecttype.name }}</p>
+            <h1>{{ category }} Projects</h1>
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
