--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -50,7 +50,7 @@
             <h1><a href="{% url home %}">Future Green Studio</a></h1>
             <nav>
                 <ul>
-                    <li>Portfolio</li>
+                    <li><a href="{% url portfolio_project_list %}">Portfolio</a></li>
                     <li>Studio</li>
                     <li>Blog</li>
                 </ul>
