--- a/futuregreen/templates/portfolio/portfolio_base.html
+++ b/futuregreen/templates/portfolio/portfolio_base.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% block section_title %}: Portfolio{% endblock section_title %}
 {% block content %}
-{% block content_header %}
-<header>
-    {% block content_title %}
-        <h1>Portfolio</h1>
-    {% endblock content_title %}
-</header>
-{% endblock content_header %}
+    {% block content_header %}
+        <header>
+        {% block content_title %}
+            <h1>Portfolio</h1>
+        {% endblock content_title %}
+        </header>
+    {% endblock content_header %}
+   {%  block main %}
+   {%  endblock main %}
+   {%  block aside %}
+   {%  endblock aside %}
 {% endblock content %}
