--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -1,17 +1,17 @@
 {% extends "portfolio/portfolio_base.html" %}
 
-{% block content %}
+
 <section class="project-list">
-{% block content_header %}
-<header>
+    {% block content_header %}
+    <header>
     {% block content_title %}
         <h1>All Projects</h1>
     {% endblock content_title %}
-</header>
-{% endblock content_header %}
-{% for project in project_list %}
-     {% include "portfolio/project_snippet.html" %}
-{% endfor %}
+    </header>
+    {% endblock content_header %}
+    {% block main %}
+        {% for project in project_list %}
+            {% include "portfolio/project_snippet.html" %}
+        {% endfor %}
+    {% endblock main %}
 </section>
-
-{% endblock content %}
