--- a/futuregreen/templates/portfolio/projects_by_landscape.html
+++ b/futuregreen/templates/portfolio/projects_by_landscape.html
@@ -1,5 +1,5 @@
 {% extends 'portfolio/portfolio_base.html' %}
-{% block content %}
+
     {% block content_header %}
     <header>
     {% load category_tags %}
@@ -9,7 +9,8 @@
         {% endblock content_title %}
    </header>
     {% endblock content_header %}
+    {% block main %}
     {% for project in category.landscapetype.project_set.all %}
         {% include "portfolio/project_snippet.html" %}
     {% endfor %}
-{% endblock content %}
+    {% endblock main %}
