--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -18,6 +18,9 @@
             {% if project.date_end %}<p>{{ project.date_end }}</p>{% endif %}
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
             <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
+            {% if project.max_area %}
+                <p>{{ project.max_area }}</p>
+            {% endif %}
         </section>
 
          {% if project.tags.all or project.categories.all %}
