--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -19,7 +19,7 @@
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
             <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
             {% if project.max_area %}
-                <p>{{ project.max_area }}</p>
+                <p>{{ project.relative_size }}</p>
             {% endif %}
         </section>
 
