--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -18,7 +18,7 @@
             {% if project.date_end %}<p>{{ project.date_end }}</p>{% endif %}
             {% if external_url %}<p>{{ project.external_url }}</p>{% endif %}
             <p>{{ project.area|floatformat }} {{ project.get_unit_display }} </p>
-            <p>Relative size:{{ project.relative_size }}</p>
+            <p>{{ project.relative_size }}</p>
         </section>
 
          {% if project.tags.all or project.categories.all %}
