adding new view for project area

--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -6,6 +6,7 @@
                     <a href="{{ project.get_absolute_url }}">
                         <img src="{{ image.list.url }}"
                              alt="{{ image.caption }}"
+                             height="{{ image.list.height }}"
                              style="width:{{ project.relative_size|floatformat }}%"/>
                     </a>
                 {% endif %}
