--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -12,7 +12,7 @@
                 {% endif %}
             {% endfor %}
         </section>
-        <section class="description">
+        <section class="description" style="display:none">
             <p>{{ project.short_description }}</p>
             {% if project.date_start %}<p>{{ project.date_start }}</p>{% endif %}
             {% if project.date_end %}<p>{{ project.date_end }}</p>{% endif %}
@@ -24,7 +24,7 @@
         </section>
 
          {% if project.tags.all or project.categories.all %}
-        <section class="classification">
+        <section class="classification" style="display:none">
             {% if project.tags.all %}
             <ul>
                 {% for tag in project.tags.all %}
@@ -41,5 +41,5 @@
             {% endif %}
         </section>
         {% endif %}
-        <p><a href="{{ project.get_absolute_url }}">View project</a> </p>
+        <p style="display:none"><a href="{{ project.get_absolute_url }}">View project</a> </p>
     </article>
