adding new view for project area

--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -3,6 +3,7 @@
         <section class="image"
                  style="float:left;
                         width:{{ project.relative_size|floatformat }}%;
+                        height:100px;
                         overflow:hidden">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
