--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -10,7 +10,7 @@
                     <a href="{{ project.get_absolute_url }}">
                         <img src="{{ image.detail.url }}"
                              alt="{{ image.caption }}"
-                             width="{{ image.detail.width }}"
+                             width="100%"
                         />
                     </a>
                 {% endif %}
